--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <activity android:name=".withdrawSetting.WithdrawActivity" />
         <activity android:name=".withdrawSetting.AccountListActivity" />
         <activity android:name=".withdrawSetting.AccountDetailActivity"></activity>
+        <activity android:name=".staffSend.StaffSendActivity" />
+        <activity android:name=".staffSend.StaffActivity" />
+        <activity android:name=".staffSend.AddStaffActivity" />
+        <activity android:name=".staffSend.ShopActivity" />
+        <activity android:name=".staffSend.AddShopActivity" />
     </application>
 
 </manifest>
